<resources>
    <string name="app_name">SATHKAARAYA</string>
    <string name="tv_btn_travel">Tours</string>
    <string name="btn_join">Join</string>
    <string name="btn_SignIn">Sign in</string>
    <string name="tv_join">Join</string>
    <string name="tv_firstName">First Name</string>
    <string name="tv_lastName">Last Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_phone_num">Phone Number</string>
    <string name="tv_password">Password</string>
    <string-array name="countryNames">
        <item>Country</item>
        <item>Sri Lanka</item>
        <item>India</item>
        <item>Canada</item>
        <item>Germany</item>
        <item>Australia</item>
    </string-array>
    <string-array name="countryCodes">
        <item>+94</item>
        <item>+11</item>
        <item>+96</item>
        <item>+23</item>
        <item>+12</item>
        <item>+01</item>
    </string-array>
    <string-array name="packages">
        <item>Lite</item>
        <item>Bronze</item>
        <item>Gold</item>
        <item>Platinum</item>
    </string-array>
    <string name="tv_country">Country</string>
    <string name="tv_confirmPass">Confirm Password</string>
    <string name="tv_passRestrictions">*password should be 8-20 characters!\n*password should have a lower case letter!
        \n*password should have a an upper case letter!\n*password dosent need to be meaningful!</string>
    <string name="tv_notification">Manage Notifications</string>
    <string name="cb_email">I would like to recive account updates,program\nnews and offers via email and direct mail.</string>
    <string name="cb_offers">I would like to recive exclusive offers from selected\nthird parties</string>
    <string name="tv_termsAndCon">By signing up, I agree to Sathkaraya\'s <a href="#">Terms of use</a> and <a href="#">Data privacy Center</a></string>
    <string name="btn_notNow">NOT NOW</string>
    <string name="tv_signIn">Sign In</string>
    <string name="tv_signInEmail">Email or Phone number</string>
    <string name="cb_remMe">Remember me</string>
    <string name="tv_userProfile">User Profile</string>
    <string name="tv_edit">Edit</string>
    <string name="tv_receipts">Receipt</string>
    <string name="tv_tours">Tours</string>
    <string name="tv_foodAndBreverages">Food and Breverages</string>
    <string name="gymAndActivities">Gym and Activities</string>
    <string name="imageView2">Tours Image</string>
    <string name="tv_btn_food">Food and Beverages</string>
    <string name="tv_btn_gym">Gymnasium and Shop</string>
    <string name="tv_hvyMeal">Heavy Meals</string>
    <string name="tv_snack">Snacks</string>
    <string name="tv_bvg">Beverages</string>
    <string name="tv_app_title">Food and Beverages</string>
    <string name="textView4">Services</string>
    <string name="tv_HeavyMeals_appBar">Heavy Meals</string>
    <string name="tv_heading_fbForm">You can make your order here</string>
    <string name="et_hint_cName">Enter your name</string>
    <string name="et_roomNo">Enter your room number</string>
    <string name="etn_tpnumber">Enter your contact number</string>
    <string name="tv_CustomerName">Customer Name:</string>
    <string name="tv_roonNo">Room No:</string>
    <string name="tv_contactnum">Contact No:</string>
    <string name="tv_foodItem">Food Item</string>
    <string name="tv_qty">Quantity:</string>
    <string name="btn_qty_add">+</string>
    <string name="btn_qty_sub">-</string>
    <string name="btn_proceed">PROCEED</string>
    <string name="hint_qty">Quantity</string>
    <string name="title_activity_enterdetails">enterdetails</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="et_name">Name</string>
    <string name="et_startingDate">Starting Date</string>
    <string name="btn_send">Send</string>
    <string name="et_endingDate">Ending Date</string>
    <string name="et_NoOfAdults">Adults</string>
    <string name="et_NoOfChildren">Children</string>
    <string name="tv_enterDetails">Enter Details</string>
    <string name="tv_unitPrice">Unit Price:</string>
    <string name="btn_purchase">PURCHASE</string>
    <string name="hint_tot">Total Price</string>
    <string name="tv_mealOrderTopic">Order Your Meal Here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gymtext">Make time for the gym  and avoid your discomfort</string>
    <string name="gymbrowsing">Make time for the gym  and avoid your discomfort</string>
    <string name="gymgym">Browse Gym Booking</string>
    <string name="activitytext">Experience all our activities and Games</string>
    <string name="browseactivities">BROWSE ACTIVITIES</string>
    <string name="gymnew">BROWSE GYM BOOKING</string>
    <string name="gymandactiviiesbtn">Gym and Activities</string>
    <string name="et_search">Where are you going?</string>
    <string name="tv_selectPackage">Select Package</string>
    <string name="btn_viewHeavyMealList">View Orders</string>
    <string-array name="heavyMealItems">
        <item>Burgers</item>
        <item>Submarine</item>
        <item>Shawarma</item>
        <item>Biriyani</item>
    </string-array>
    <string-array name="sanckItems">
        <item>Cookies</item>
        <item>Waffles</item>
        <item>Pancakes</item>
        <item>CupCakes</item>
    </string-array>
    <string-array name="beverageItems">
        <item>MilkShakes</item>
        <item>FruitDrinks</item>
        <item>Softdrinks</item>
        <item>Cocktails</item>
    </string-array>
    <string name="firstName">First Name :</string>
    <string name="lastName">Last Name :</string>
    <string name="email">Email:</string>
    <string name="phoneNumber">Mobile :</string>
    <string name="country">Country :</string>
    <string name="totalBill">Total Bill :</string>
    <string name="description1">Select a date and a time to book  a slot</string>
    <string name="gymbooking">Gym Booking</string>
    <string name="tv_orders">Orders</string>
</resources>
